# crisisloop

./: Dockerfile  README.md  app.py  inference.py  inference_results.json  openenv.yaml  pyproject.toml  requirements.txt  test_graders.py
backend/: main.py
backend/agents/: omni_agents.py
backend/core/: customer_engine.py  environment.py
backend/data/: scenarios.py
backend/models/: schemas.py
backend/routers/: boost.py  crm.py  omnichannel.py
backend/scripts/: baseline.py
backend/tasks/: graders.py  tasks.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/boost/: page.tsx
frontend/src/app/device-sync/: page.tsx
frontend/src/app/live-call/: layout.tsx  page.tsx
frontend/src/app/omnichannel/: page.tsx
frontend/src/app/replay/: page.tsx
frontend/src/app/scenarios/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/studio/: page.tsx
frontend/src/app/tasks/: page.tsx
server/: app.py
